--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^5.1.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
