--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^5.1.0",
-    "react-lazy-load-image-component": "^1.5.1",
     "react-loader-spinner": "^3.1.14",
     "react-responsive-masonry": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
