--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_PIXABAY_API_KEY=19428014-2af44ea97a4825e5ee6c2972a
+REACT_APP_PIXABAY_API_KEY="Enter your pixabay api key make this website work"
